--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,21 +3,20 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Production builds
 dist/
 build/
-out/
 
 # Environment variables
-.env
+# Note: Backend uses the .env file from project root
+# Do not create .env files in the backend directory
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# IDE and editor files
+# IDE files
 .vscode/
 .idea/
 *.swp
@@ -34,11 +33,11 @@ ehthumbs.db
 Thumbs.db
 
 # Logs
-*.log
 logs/
+*.log
 
 # Runtime data
-pids/
+pids
 *.pid
 *.seed
 *.pid.lock
@@ -47,14 +46,14 @@ pids/
 coverage/
 *.lcov
 
-# Cache directories
-.cache/
-.parcel-cache/
-.next/
-.nuxt/
+# nyc test coverage
+.nyc_output
 
-# Temporary folders
-tmp/
-temp/
+# TypeScript cache
+*.tsbuildinfo
 
-data/
+# Jest cache
+.jest/
+
+# ESLint cache
+.eslintcache
