🔧 chore: update project configuration and environment setup
- Add comprehensive tool permissions to Claude settings
- Standardize environment variables with better organization
- Update Docker configuration for multi-stage builds
- Add development-specific Docker compose overrides
- Include quick start documentation for Docker setup
- Update project instructions in CLAUDE.md

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
-# Project Nexus Environment Configuration
-# Copy this file to .env and update values for your environment
+# Project Nexus - Environment Configuration
+# Copy this file to .env and update with your actual values
 
 #######################
-# Environment Settings
+# Docker Configuration
 #######################
+DOCKER_TARGET=development
 NODE_ENV=development
-DOCKER_TARGET=build
+DATA_DIR=./data
 
 #######################
-# Service Ports
+# Port Configuration
 #######################
+WEB_PORT=3001
 BACKEND_PORT=3000
 POSTGRES_PORT=5432
 REDIS_PORT=6379
@@ -22,55 +24,54 @@ REDIS_COMMANDER_PORT=8081
 POSTGRES_DB=nexus_db
 POSTGRES_USER=nexus
 POSTGRES_PASSWORD=nexus_secure_2024
-DB_POOL_MIN=2
-DB_POOL_MAX=10
-DB_TIMEOUT=30000
-
-# PostgreSQL Performance Settings
 POSTGRES_MAX_CONNECTIONS=100
 POSTGRES_SHARED_BUFFERS=128MB
 POSTGRES_EFFECTIVE_CACHE_SIZE=4GB
 POSTGRES_WORK_MEM=4MB
 POSTGRES_MAINTENANCE_WORK_MEM=64MB
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+DB_TIMEOUT=30000
 
 #######################
 # Redis Configuration
 #######################
 REDIS_PASSWORD=
 REDIS_DB=0
+REDIS_COMMANDER_USER=admin
+REDIS_COMMANDER_PASSWORD=admin123
 
 #######################
 # Auth0 Configuration
+# Get these values from your Auth0 Dashboard
 #######################
-# Required: Get these from your Auth0 Dashboard
-AUTH0_DOMAIN=your-tenant.auth0.com
-AUTH0_CLIENT_ID=your_client_id
-AUTH0_CLIENT_SECRET=your_client_secret
+AUTH0_SECRET=your-auth0-secret-change-in-production
+AUTH0_BASE_URL=http://localhost:3001
+AUTH0_DOMAIN=your-domain.auth0.com
+AUTH0_ISSUER_BASE_URL=https://your-domain.auth0.com
+AUTH0_CLIENT_ID=your-auth0-client-id
+AUTH0_CLIENT_SECRET=your-auth0-client-secret
 AUTH0_AUDIENCE=https://api.nexus.app
-
-# Auth0 Management API (for user management)
-AUTH0_MANAGEMENT_CLIENT_ID=your_management_client_id
-AUTH0_MANAGEMENT_CLIENT_SECRET=your_management_client_secret
-
-#######################
-# JWT Configuration
-#######################
-JWT_SECRET=your-super-secret-jwt-key-change-in-production-minimum-32-chars
-JWT_EXPIRES_IN=24h
+AUTH0_MANAGEMENT_CLIENT_ID=your-management-client-id
+AUTH0_MANAGEMENT_CLIENT_SECRET=your-management-client-secret
 
 #######################
 # API Configuration
 #######################
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRES_IN=24h
 API_VERSION=v1
-CORS_ORIGIN=http://localhost:3001,http://localhost:3000
+CORS_ORIGIN=http://localhost:3001,http://web:3000
 RATE_LIMIT_WINDOW=15
 RATE_LIMIT_MAX=100
+GRAPHQL_ENDPOINT=http://backend:3000/graphql
+API_BASE_URL=http://backend:3000
 
 #######################
 # OpenAI Configuration
+# Required for embeddings and vector search
 #######################
-# Required: Get from OpenAI Dashboard
-OPENAI_API_KEY=sk-your-openai-api-key
+OPENAI_API_KEY=your-openai-api-key
 OPENAI_MODEL=text-embedding-ada-002
 
 #######################
@@ -83,26 +84,4 @@ LOG_FORMAT=json
 # Security Configuration
 #######################
 BCRYPT_ROUNDS=12
-SESSION_SECRET=your-session-secret-change-in-production-minimum-32-chars
-
-#######################
-# Data Storage
-#######################
-DATA_DIR=./data
-
-#######################
-# Development Tools (Admin Interfaces)
-#######################
-REDIS_COMMANDER_USER=admin
-REDIS_COMMANDER_PASSWORD=admin123
-
-#######################
-# Production Security (Override in production)
-#######################
-# Use strong, unique values in production:
-# - Generate JWT_SECRET with: openssl rand -base64 32
-# - Generate SESSION_SECRET with: openssl rand -base64 32
-# - Use environment-specific database passwords
-# - Enable Redis AUTH with REDIS_PASSWORD
-# - Configure Auth0 with production domains
-# - Set CORS_ORIGIN to your production domains only
+SESSION_SECRET=your-session-secret-change-in-production
