--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@apollo/server": "^4.9.5",
     "@graphql-tools/merge": "^9.0.1",
     "@graphql-tools/schema": "^10.0.0",
+    "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -52,12 +53,14 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.8.10",
     "@types/pg": "^8.10.7",
+    "@types/supertest": "^6.0.3",
     "@types/ws": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
