✨ feat: implement comprehensive user onboarding system
- Add complete v1 onboarding flow with 3-step process (welcome, profile setup, workspace intro)
- Create API endpoints for onboarding progress tracking and user profile management
- Implement onboarding routing logic with localStorage-based completion tracking
- Add protected onboarding page with Auth0 integration
- Create reusable onboarding components with progress indicators
- Include v2 advanced onboarding design (archived for future implementation)
- Update home page and workspace page to redirect based on onboarding status
- Add TypeScript types for onboarding data structures
- Include development-ready API stubs with TODO comments for database integration
- Update docker-compose for improved development workflow
- Add documentation for both v1 simple and v2 advanced onboarding approaches

This implements a realistic onboarding experience focused on user profile setup
and workspace introduction, setting appropriate expectations for v1 capabilities.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,16 +39,19 @@ services:
       
     volumes:
       # Development hot-reload (only in development)
-      - ./clients/web/app:/app/app:ro
-      - ./clients/web/components:/app/components:ro
-      - ./clients/web/hooks:/app/hooks:ro
-      - ./clients/web/lib:/app/lib:ro
-      - ./clients/web/styles:/app/styles:ro
-      - ./clients/web/types:/app/types:ro
+      - ./clients/web/app:/app/app
+      - ./clients/web/components:/app/components
+      - ./clients/web/hooks:/app/hooks
+      - ./clients/web/lib:/app/lib
+      - ./clients/web/styles:/app/styles
+      - ./clients/web/types:/app/types
       - ./clients/web/package.json:/app/package.json:ro
       - ./clients/web/next.config.js:/app/next.config.js:ro
       - ./clients/web/tailwind.config.js:/app/tailwind.config.js:ro
       - ./clients/web/tsconfig.json:/app/tsconfig.json:ro
+      # Next.js build cache and node_modules for hot reload
+      - /app/.next
+      - /app/node_modules
     depends_on:
       backend:
         condition: service_healthy
