--- a/clients/web/tsconfig.json
+++ b/clients/web/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "es6"],
+    "target": "ES2015",
+    "lib": ["dom", "dom.iterable", "ES2015", "ES2017"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -13,6 +13,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["jest", "@testing-library/jest-dom"],
+    "downlevelIteration": true,
     "plugins": [
       {
         "name": "next"
