✅ fix: resolve all TypeScript errors in CI/CD pipeline
- Cast global.fetch as jest.Mock in test files to fix mock method typing
- Add type-check script to backend package.json
- Fix ExtendedUserProfile by converting null values to undefined
- Ensure all Auth0 user properties handle null properly
- All TypeScript checks now pass successfully

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
+    "type-check": "tsc --noEmit",
     "migrate": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:status": "knex migrate:status",
