--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,12 +129,16 @@ jobs:
         working-directory: backend
         env:
           NODE_ENV: test
+          POSTGRES_DB: nexus_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: test_password
           DATABASE_URL: postgresql://postgres:test_password@localhost:5432/nexus_test
           REDIS_URL: redis://localhost:6379
           AUTH0_DOMAIN: test.auth0.com
           AUTH0_CLIENT_ID: test_client_id
-          AUTH0_CLIENT_SECRET: test_secret
-          JWT_SECRET: test_jwt_secret
+          AUTH0_CLIENT_SECRET: test_client_secret_for_testing_purposes
+          JWT_SECRET: test_jwt_secret_for_unit_tests_minimum_32_chars_required_by_validation
+          SESSION_SECRET: test_session_secret_for_testing_minimum_32_chars_required_validation
         run: npm test
       
       - name: Install frontend dependencies
