--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,12 +77,30 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
       
-      - name: Check for secrets
+      - name: Check for secrets (Pull Request)
+        if: github.event_name == 'pull_request'
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
+          base: ${{ github.event.pull_request.base.sha }}
+          head: ${{ github.event.pull_request.head.sha }}
+          
+      - name: Check for secrets (Push)
+        if: github.event_name == 'push' && github.event.before != '0000000000000000000000000000000000000000'
+        uses: trufflesecurity/trufflehog@main
+        with:
+          path: ./
+          base: ${{ github.event.before }}
+          head: ${{ github.event.after }}
+          extra_args: --debug --only-verified
+          
+      - name: Check for secrets (Full Scan)
+        if: (github.event_name == 'push' && github.event.before == '0000000000000000000000000000000000000000') || github.event_name == 'workflow_dispatch'
+        uses: trufflesecurity/trufflehog@main
+        continue-on-error: true
+        with:
+          path: ./
+          extra_args: --debug --only-verified
 
   # Test suite
   test:
