feat: implement Auth0 authentication system (NEX-142)
Integrate secure authentication using Auth0 with development mode support for Flutter mobile app.

Features implemented:
- Auth0 Flutter SDK integration with Universal Login
- Secure token storage using flutter_secure_storage
- Development mode authentication bypass for testing
- JWT token management with automatic refresh
- Cross-platform configuration (Android/iOS/Web)
- Modern login/logout UI with error handling
- API client with Auth0 token interceptors
- Router authentication guards and redirects
- Riverpod-based state management for auth

Platform configurations:
- Android: Deep link handling, secure storage, manifest placeholders
- iOS: URL schemes, AppDelegate updates, Keychain entitlements
- Cross-platform: Secure storage with platform-specific options

Technical details:
- Uses same Auth0 domain/audience as backend API
- Supports development headers (X-User-Sub, X-User-Email) matching backend
- Automatic token refresh on 401 responses
- Protected routes (/capture, /sync) with authentication guards
- Session persistence with secure credential storage

All acceptance criteria met and ready for review.

--- a/clients/app/pubspec.yaml
+++ b/clients/app/pubspec.yaml
@@ -37,7 +37,13 @@ dependencies:
   go_router: ^16.2.0
   json_annotation: ^4.8.1
   path_provider: ^2.1.2
+  riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.2
+  
+  # Auth0 and Security
+  auth0_flutter: ^1.7.2
+  flutter_secure_storage: ^9.2.2
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
