--- a/clients/app/android/app/src/main/AndroidManifest.xml
+++ b/clients/app/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     <application
         android:label="nexus_mobile"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
+        android:fullBackupContent="false">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -23,6 +25,14 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            
+            <!-- Auth0 callback intent filter -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="${auth0Scheme}" android:host="${auth0Domain}" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
