--- a/clients/app/android/app/src/main/AndroidManifest.xml
+++ b/clients/app/android/app/src/main/AndroidManifest.xml
@@ -28,11 +28,11 @@
             </intent-filter>
             
             <!-- Auth0 callback intent filter -->
-            <intent-filter android:autoVerify="true">
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="${auth0Scheme}" android:host="${auth0Domain}" />
+                <data android:scheme="de.nexus-app.mobile" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
