--- a/clients/app/ios/Runner/Info.plist
+++ b/clients/app/ios/Runner/Info.plist
@@ -51,10 +51,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>auth0</string>
+			<string>de.nexus-app.mobile</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>$(PRODUCT_BUNDLE_IDENTIFIER).auth0</string>
+				<string>de.nexus-app.mobile</string>
 			</array>
 		</dict>
 	</array>
