fix: update package name to dev.curth.nexusmobile (NEX-142)
- Changed package name to dev.curth.nexusmobile
- Updated all references in build.gradle, AndroidManifest, Info.plist, and environment.dart
- Auth0 URLs now use dev.curth.nexusmobile://login and dev.curth.nexusmobile://logout

--- a/clients/app/ios/Runner/Info.plist
+++ b/clients/app/ios/Runner/Info.plist
@@ -51,10 +51,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>de.nexus-app.mobile</string>
+			<string>dev.curth.nexusmobile</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>de.nexus-app.mobile</string>
+				<string>dev.curth.nexusmobile</string>
 			</array>
 		</dict>
 	</array>
