--- a/clients/app/android/app/src/main/AndroidManifest.xml
+++ b/clients/app/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="de.nexus-app.mobile" />
+                <data android:scheme="dev.curth.nexusmobile" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
