fix: implement proper Auth0 Flutter configuration per official docs (NEX-142)
- Updated Android manifest to use appAuthRedirectScheme instead of auth0Scheme
- Removed manual intent filter (Auth0 SDK handles this automatically)
- Updated iOS URL scheme to use  format
- Changed callback URLs to follow Auth0 standard format:
  - Android: scheme://domain/android/package/callback
  - iOS: bundle://domain/ios/bundle/callback
- Added scheme parameter to webAuthentication() calls for Android support
- Based on official Auth0 Flutter SDK documentation

--- a/clients/app/ios/Runner/Info.plist
+++ b/clients/app/ios/Runner/Info.plist
@@ -50,11 +50,13 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>dev.curth.nexusmobile</string>
+			<string>auth0</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>dev.curth.nexusmobile</string>
+				<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 			</array>
 		</dict>
 	</array>
