feat: switch to HTTPS callback URLs for enhanced security (NEX-142)
- Changed callback URLs from custom scheme to HTTPS format
- Updated Android manifest to handle HTTPS callbacks with auto-verify
- Added iOS Universal Links support with associated domains
- Auth0 domain now configurable via AUTH0_DOMAIN environment variable
- Callback URLs: https://your-domain/mobile/callback
- Logout URLs: https://your-domain/mobile/logout
- Enhanced security over custom URL schemes

--- a/clients/app/ios/Runner/Info.plist
+++ b/clients/app/ios/Runner/Info.plist
@@ -60,5 +60,11 @@
 			</array>
 		</dict>
 	</array>
+	
+	<!-- Associated Domains for Universal Links (HTTPS callbacks) -->
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:your-tenant.auth0.com</string>
+	</array>
 </dict>
 </plist>
