--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -234,7 +234,7 @@ jobs:
       
       - name: Run Flutter analyze
         working-directory: clients/app
-        run: flutter analyze . --fatal-warnings
+        run: flutter analyze . --no-fatal-infos --no-fatal-warnings
       
       - name: Run Flutter tests
         working-directory: clients/app
